<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_feature</name>
  <version>0.1.0</version>
  <description>The package which integrate safety features into ROS2 for human-robot collaboration</description>
  <maintainer email="s.lee@wootzano.com">Sangtaek Lee</maintainer>
  <license>TODO: License declaration</license>
  <author email="s.lee@wootzano.com">Sangtaek Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>